--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dompurify": "^3.0.11",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
+    "jsdom": "^24.0.0",
     "tinymce": "^7.0.0"
   }
 }
